@@ -5,6 +5,7 @@ awesant (0.12) released at XXXX-XX-XX
     * Added parameter milliseconds for @timestamp.
     * Added parameter oldlogstashjson to switch between the old
       and new logstash json schema.
+    * Added parameter skip for Input/File.pm to skip events.
 
 awesant (0.11) released at 2012-08-30
 
